# test-multimodal

./: main.py  pyproject.toml
src/: image_detection.py  video_file_detection.py  video_youtube_detection.py
